dnl Initialisation
AC_PREREQ([2.59])
AC_INIT([tupleroute], [0.90-dev], [bugreports@paris-traceroute.net])
AC_CONFIG_SRCDIR([src/paris-traceroute.cc])
AC_CONFIG_HEADER([config.h])

AM_INIT_AUTOMAKE()

dnl Check system
dnl TODO

dnl Check the presence of basic programs
AC_PROG_CXX
AC_PROG_INSTALL
AC_PROG_RANLIB
AC_DISABLE_SHARED
AC_PROG_LIBTOOL
AC_PROG_MAKE_SET

dnl Check headers file
AC_C_CONST
AC_C_INLINE
AC_HEADER_STDC
AC_HEADER_STDBOOL
AC_HEADER_TIME
AC_TYPE_PID_T
AC_CHECK_HEADERS([arpa/inet.h netdb.h netinet/in.h stdlib.h string.h sys/socket.h unistd.h sys/time.h fcntl.h sys/ioctl.h syslog.h],, AC_MSG_ERROR("Header missing"))

dnl Check libraries
AC_CHECK_LIB([pthread], [main])

dnl Check functions
AC_CHECK_FUNCS([memset socket strdup gettimeofday inet_ntoa strerror gethostbyaddr gethostbyname],, AC_MSG_ERROR("Function missing"))

dnl Add "--enable-debug" flag
AC_ARG_ENABLE([debug],
	AC_HELP_STRING([--disable-debug], [Don't show debug messages]),,
	AC_DEFINE(DEBUG, 1, [Debug flag]))

dnl Output configuration files
AC_CONFIG_FILES([Makefile] [src/Makefile] [doc/Makefile])
AC_OUTPUT
